--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@capacitor/barcode-scanner",
-  "version": "1.0.1",
+  "name": "bpw-barcode-scanner",
+  "version": "1.1.0",
   "description": "Capacitor plugin using Outsystems Barcode libs",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
